test/libsolidity/syntaxTests/parsing/malformed_enum_declaration.sol
contract c {
	enum foo { WARNING,}
}
// ----
// ParserError 1612: (33-34): Expected identifier after ','
